# arvik

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
ajaya/: Cargo.toml
ajaya-core/: README.md
ajaya-extract/: README.md
ajaya-hyper/: Cargo.toml  README.md
ajaya-hyper/src/: lib.rs  serve.rs  server.rs
ajaya-middleware/: README.md
ajaya-router/: README.md
ajaya-sse/: Cargo.toml  README.md
ajaya-sse/src/: event.rs  keep_alive.rs  lib.rs  sse.rs
ajaya-ws/: Cargo.toml  README.md
ajaya-ws/src/: lib.rs  message.rs  rejection.rs  socket.rs  split.rs  upgrade.rs
ajaya/src/: lib.rs
arvik/: Cargo.toml
arvik-core/: Cargo.toml
arvik-core/src/: body.rs  error.rs  extract.rs  handler.rs  into_response.rs  into_response_parts.rs  lib.rs  method_filter.rs  request.rs  request_parts.rs  response.rs  stream_body.rs
arvik-extract/: Cargo.toml
arvik-extract/src/: body.rs  bytes_extract.rs  connect_info.rs  cookies.rs  extension.rs  form.rs  header_map.rs  json.rs  lib.rs  matched_path.rs  method.rs  multipart.rs  original_uri.rs  path.rs  path_de.rs  query.rs  raw_path_params.rs  rejection.rs  state.rs  typed_header.rs  uri.rs
arvik-extract/tests/: multipart.rs
arvik-hyper/: Cargo.toml
arvik-hyper/src/: lib.rs  serve.rs  server.rs
arvik-macros/: Cargo.toml
arvik-macros/src/: lib.rs
arvik-middleware/: Cargo.toml
arvik-middleware/src/: auth.rs  body_limit.rs  catch_panic.rs  compression.rs  cors.rs  csrf.rs  from_fn.rs  lib.rs  map_body.rs  map_request.rs  map_response.rs  middleware_fn.rs  next.rs  rate_limit.rs  request_id.rs  security_headers.rs  timeout.rs  trace.rs
arvik-router/: Cargo.toml
arvik-router/src/: layer.rs  lib.rs  method_router.rs  params.rs  router.rs  service.rs
arvik-sse/: Cargo.toml
arvik-sse/src/: event.rs  keep_alive.rs  lib.rs  sse.rs
arvik-static/: Cargo.toml
arvik-static/src/: lib.rs
arvik-test/: Cargo.toml
arvik-test/src/: lib.rs
arvik-tls/: Cargo.toml
arvik-tls/src/: lib.rs
arvik-ws/: Cargo.toml
arvik-ws/src/: lib.rs  message.rs  rejection.rs  socket.rs  split.rs  upgrade.rs
arvik/src/: lib.rs
examples/rest_api/: Cargo.toml
examples/rest_api/src/: main.rs
examples/sse_demo/: Cargo.toml
examples/sse_demo/src/: main.rs
examples/websocket_chat/: Cargo.toml  chat.html
examples/websocket_chat/src/: main.rs
