[workspace]
members = [
    "arvik",
    "arvik-core",
    "arvik-router",
    "arvik-hyper",
    "arvik-extract",
    "arvik-middleware",
    "arvik-ws",
    "arvik-sse",
    "arvik-static",
    "arvik-tls",
    "arvik-macros",
    "arvik-test",
    # Examples
    "examples/websocket_chat",
    "examples/rest_api",
    "examples/sse_demo",
]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2024"
license = "MIT OR Apache-2.0"
readme       = "README.md"
repository = "https://github.com/AarambhDevHub/arvik"
authors = ["Aarambh Dev Hub"]
rust-version = "1.85"
description = "Fast, Typed, and Fearless Web Framework for Rust"

[workspace.dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
tokio-stream   = "0.1"

# HTTP
hyper          = { version = "1", features = ["server", "http1", "http2"] }
hyper-util     = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http           = "1"
http-body      = "1"
http-body-util = "0.1"

# Tower
tower          = { version = "0.5", features = ["full"] }
tower-http     = { version = "0.6", features = ["full"] }
tower-layer    = "0.3"
tower-service  = "0.3"

# Bytes
bytes          = "1"

# Serde
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_urlencoded = "0.7"

# WebSocket
tokio-tungstenite = "0.24"

# TLS
rustls         = "0.23"
tokio-rustls   = "0.26"
rustls-pemfile = "2"

# Multipart
multer         = "3"

# Compression
async-compression = { version = "0.4", features = ["gzip", "brotli", "zstd", "deflate", "tokio"] }

# Routing
matchit        = "0.8"

# Utilities
pin-project-lite = "0.2"
futures-util   = "0.3"
ahash          = "0.8"
smallvec       = { version = "1", features = ["union"] }
parking_lot    = "0.12"
thiserror      = "2"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid           = { version = "1", features = ["v4"] }
mime           = "0.3"
percent-encoding = "2"
itoa           = "1"
headers        = "0.4"

# Proc macro (arvik-macros only)
syn            = { version = "2", features = ["full"] }
quote          = "1"
proc-macro2    = "1"

# Cookies (0.3.3)
cookie = { version = "0.18", features = ["percent-encode", "signed", "private"] }

# tokio-util needed for io bridges (ReaderStream, StreamReader)
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3"

# base64 for Basic auth encoding/decoding
base64 = "0.22"

sha1 = "0.10"

# Internal crates
arvik-core       = { path = "arvik-core", version = "0.5.2" }
arvik-router     = { path = "arvik-router", version = "0.5.2" }
arvik-hyper      = { path = "arvik-hyper", version = "0.5.2" }
arvik-extract    = { path = "arvik-extract", version = "0.5.2" }
arvik-middleware = { path = "arvik-middleware", version = "0.5.2" }
arvik-ws         = { path = "arvik-ws", version = "0.5.2" }
arvik-sse        = { path = "arvik-sse", version = "0.5.2" }
arvik-static     = { path = "arvik-static", version = "0.5.2" }
arvik-tls        = { path = "arvik-tls", version = "0.5.2" }
arvik-macros     = { path = "arvik-macros", version = "0.5.2" }
arvik-test       = { path = "arvik-test", version = "0.5.2" }
