[package]
name = "ajaya-hyper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Hyper server integration for the Ajaya web framework"

[dependencies]
ajaya-core     = { workspace = true }
ajaya-router   = { workspace = true }
tokio          = { workspace = true }
hyper          = { workspace = true }
hyper-util     = { workspace = true }
http           = { workspace = true }
http-body      = { workspace = true }
http-body-util = { workspace = true }
bytes          = { workspace = true }
tracing        = { workspace = true }
tower-service  = { workspace = true }
socket2        = { workspace = true }