[package]
name = "ajaya-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WebSocket support for the Ajaya web framework"

[dependencies]
ajaya-core        = { workspace = true }
http              = { workspace = true }
hyper             = { workspace = true }
hyper-util        = { workspace = true }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
bytes             = { workspace = true }
futures-util      = { workspace = true }
tracing           = { workspace = true }
pin-project-lite  = { workspace = true }
base64            = { workspace = true }
sha1              = { workspace = true }