[package]
name = "arvik-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
description = "Core traits and types for the Arvik web framework"

[dependencies]
http           = { workspace = true }
http-body      = { workspace = true }
http-body-util = { workspace = true }
hyper          = { workspace = true }
bytes          = { workspace = true }
thiserror      = { workspace = true }
pin-project-lite = { workspace = true }
futures-util   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
mime           = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }