[package]
name = "arvik-sse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
description = "Server-Sent Events for the Arvik web framework"

[dependencies]
arvik-core       = { workspace = true }
http             = { workspace = true }
http-body        = { workspace = true }
bytes            = { workspace = true }
futures-util     = { workspace = true }
pin-project-lite = { workspace = true }
tokio            = { workspace = true }
itoa             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }