[package]
name = "rest-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Full REST API demo for Arvik — routing, middleware, cookies, streaming, CSRF"

[[bin]]
name = "rest_api"
path = "src/main.rs"

[dependencies]
arvik          = { path = "../../arvik" }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
bytes          = { workspace = true }
futures-util   = { workspace = true }
http           = { workspace = true }
cookie         = { workspace = true }
uuid           = { workspace = true }
