[package]
name = "sse-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SSE demo for Ajaya — counter, JSON stream, broadcast notifications"

[[bin]]
name = "sse_demo"
path = "src/main.rs"

[dependencies]
ajaya          = { path = "../../ajaya", features = ["sse"] }
tokio          = { workspace = true }
tokio-stream   = { workspace = true, features = ["sync"] }
tracing-subscriber = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
futures-util   = { workspace = true }
