[package]
name = "websocket-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-room WebSocket chat server example for Arvik"

[[bin]]
name = "websocket_chat"
path = "src/main.rs"

[dependencies]
arvik        = { path = "../../arvik", features = ["ws"] }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json   = { workspace = true }
